force-app/main/default/objects/Result__c/fields/AMH__c.field-meta.xml
<CustomField>
    <fullName>AMH__c</fullName>
    <label>AMH</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>