force-app/main/default/objects/Result__c/fields/ANA_Anti_Nuclear_Antibody__c.field-meta.xml
<CustomField>
    <fullName>ANA_Anti_Nuclear_Antibody__c</fullName>
    <label>ANA - Anti-Nuclear Antibody</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>