force-app/main/default/objects/Result__c/fields/Anti_B_2_Glycoprotein_1_Abs__c.field-meta.xml
<CustomField>
    <fullName>Anti_B_2_Glycoprotein_1_Abs__c</fullName>
    <label>Anti B-2 Glycoprotein 1 Abs</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>