force-app/main/default/objects/Result__c/fields/Anti_Thrombin_3_Level__c.field-meta.xml
<CustomField>
    <fullName>Anti_Thrombin_3_Level__c</fullName>
    <label>Anti Thrombin 3 Level</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>