force-app/main/default/objects/Result__c/fields/Antibodies__c.field-meta.xml
<CustomField>
    <fullName>Antibodies__c</fullName>
    <label>Antibodies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>