force-app/main/default/objects/Result__c/fields/Anticardiolipin_Abs__c.field-meta.xml
<CustomField>
    <fullName>Anticardiolipin_Abs__c</fullName>
    <label>Anticardiolipin Abs</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>