force-app/main/default/objects/Result__c/fields/Antral_Follicle_Count__c.field-meta.xml
<CustomField>
    <fullName>Antral_Follicle_Count__c</fullName>
    <label>Antral Follicle Count</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>