force-app/main/default/objects/Result__c/fields/ART_Results_equals_TRUE__c.field-meta.xml
<CustomField>
    <fullName>ART_Results_equals_TRUE__c</fullName>
    <formula>Patient__r.ART_Bloods_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ART Results equals TRUE?</label>
    <type>Checkbox</type>
</CustomField>