force-app/main/default/objects/Result__c/fields/BHCG__c.field-meta.xml
<CustomField>
    <fullName>BHCG__c</fullName>
    <label>BHCG</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>