force-app/main/default/objects/Result__c/fields/CLR_in_mm__c.field-meta.xml
<CustomField>
    <fullName>CLR_in_mm__c</fullName>
    <label>CLR (in mm)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>