force-app/main/default/objects/Result__c/fields/CMV__c.field-meta.xml
<CustomField>
    <fullName>CMV__c</fullName>
    <label>CMV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immune</fullName>
            </value>
            <value>
                <fullName>Not Immune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>