force-app/main/default/objects/Result__c/fields/Count_Left_Follicle__c.field-meta.xml
<CustomField>
    <fullName>Count_Left_Follicle__c</fullName>
    <label>Count Left Follicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>