force-app/main/default/objects/Result__c/fields/Count_Right_Follicle__c.field-meta.xml
<CustomField>
    <fullName>Count_Right_Follicle__c</fullName>
    <label>Count Right Follicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>