force-app/main/default/objects/Result__c/fields/Cystic_Fibrosis_Gene_Testing__c.field-meta.xml
<CustomField>
    <fullName>Cystic_Fibrosis_Gene_Testing__c</fullName>
    <label>Cystic Fibrosis Gene Testing</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>