force-app/main/default/objects/Result__c/fields/Cystic_Fibrosis_Gene_Testing_Text__c.field-meta.xml
<CustomField>
    <fullName>Cystic_Fibrosis_Gene_Testing_Text__c</fullName>
    <label>Cystic Fibrosis Gene Testing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>