force-app/main/default/objects/Result__c/fields/Factor_V_leiden_APC__c.field-meta.xml
<CustomField>
    <fullName>Factor_V_leiden_APC__c</fullName>
    <label>Factor V Leiden (APC)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>