force-app/main/default/objects/Result__c/fields/Fasting_Plasma_Homocysteine__c.field-meta.xml
<CustomField>
    <fullName>Fasting_Plasma_Homocysteine__c</fullName>
    <label>Fasting Plasma Homocysteine</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>