force-app/main/default/objects/Result__c/fields/FBE__c.field-meta.xml
<CustomField>
    <fullName>FBE__c</fullName>
    <label>FBE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Abnormal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>