force-app/main/default/objects/Result__c/fields/FBE_Comments__c.field-meta.xml
<CustomField>
    <fullName>FBE_Comments__c</fullName>
    <label>FBE Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>