force-app/main/default/objects/Result__c/fields/Ferritin__c.field-meta.xml
<CustomField>
    <fullName>Ferritin__c</fullName>
    <label>Ferritin</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>