force-app/main/default/objects/Result__c/fields/Flag_Bloods__c.field-meta.xml
<CustomField>
    <fullName>Flag_Bloods__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flow-triggered boolean test</description>
    <label>Flag Bloods</label>
    <type>Checkbox</type>
</CustomField>