force-app/main/default/objects/Result__c/fields/Fragile_X_Gene_Sequencing__c.field-meta.xml
<CustomField>
    <fullName>Fragile_X_Gene_Sequencing__c</fullName>
    <label>Fragile X Gene Sequencing</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>