force-app/main/default/objects/Result__c/fields/Fragile_X_Gene_Sequencing_Text__c.field-meta.xml
<CustomField>
    <fullName>Fragile_X_Gene_Sequencing_Text__c</fullName>
    <label>Fragile X Gene Sequencing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>