force-app/main/default/objects/Result__c/fields/FSH__c.field-meta.xml
<CustomField>
    <fullName>FSH__c</fullName>
    <label>FSH</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>