force-app/main/default/objects/Result__c/fields/Heart_Beat_Present__c.field-meta.xml
<CustomField>
    <fullName>Heart_Beat_Present__c</fullName>
    <label>Heart Beat Present</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>