force-app/main/default/objects/Result__c/fields/Heart_Rate__c.field-meta.xml
<CustomField>
    <fullName>Heart_Rate__c</fullName>
    <label>Heart Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>