force-app/main/default/objects/Result__c/fields/Hepatitis_B__c.field-meta.xml
<CustomField>
    <fullName>Hepatitis_B__c</fullName>
    <label>Hep B Serology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Detected</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>