force-app/main/default/objects/Result__c/fields/Hepatitis_C__c.field-meta.xml
<CustomField>
    <fullName>Hepatitis_C__c</fullName>
    <label>Hep C Antigen (Antibody To)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immune</fullName>
                <label>Not Detected</label>
            </value>
            <value>
                <fullName>Not Immune</fullName>
                <label>Detected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>