force-app/main/default/objects/Result__c/fields/HIV__c.field-meta.xml
<CustomField>
    <fullName>HIV__c</fullName>
    <label>HIV screen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Not Detected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>