force-app/main/default/objects/Result__c/fields/Karyotype__c.field-meta.xml
<CustomField>
    <fullName>Karyotype__c</fullName>
    <label>Karyotype Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>