force-app/main/default/objects/Result__c/fields/Karyotype_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Karyotype_Picklist__c</fullName>
    <label>Karyotype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>46XX</fullName>
            </value>
            <value>
                <fullName>46XY</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>