force-app/main/default/objects/Result__c/fields/LH__c.field-meta.xml
<CustomField>
    <fullName>LH__c</fullName>
    <label>LH</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>