force-app/main/default/objects/Result__c/fields/Lupus_Anticoagulant__c.field-meta.xml
<CustomField>
    <fullName>Lupus_Anticoagulant__c</fullName>
    <label>Lupus Anticoagulant</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>