force-app/main/default/objects/Result__c/fields/Number_of_Heart_Beats__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Heart_Beats__c</fullName>
    <label>Number of Heart Beats</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>