force-app/main/default/objects/Result__c/fields/Number_of_Sacs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sacs__c</fullName>
    <label>Number of Sacs</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>