force-app/main/default/objects/Result__c/fields/Positive_Infectious_Screen__c.field-meta.xml
<CustomField>
    <fullName>Positive_Infectious_Screen__c</fullName>
    <formula>OR(
ISPICKVAL(HIV__c, &quot;Positive&quot;),
ISPICKVAL(RPR_Syphilis__c, &quot;Positive&quot;),
ISPICKVAL(Hepatitis_B__c, &quot;Positive&quot;),
ISPICKVAL(Chlamydia_Urine__c, &quot;Positive&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Positive Infectious Screen</label>
    <type>Checkbox</type>
</CustomField>