force-app/main/default/objects/Result__c/fields/Prolactin__c.field-meta.xml
<CustomField>
    <fullName>Prolactin__c</fullName>
    <label>Prolactin</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>