force-app/main/default/objects/Result__c/fields/Protein_C_Level__c.field-meta.xml
<CustomField>
    <fullName>Protein_C_Level__c</fullName>
    <label>Protein C Level</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>