force-app/main/default/objects/Result__c/fields/Prothrombin20210a_gene_defect__c.field-meta.xml
<CustomField>
    <fullName>Prothrombin20210a_gene_defect__c</fullName>
    <label>Prothrombin20210a Gene Defect</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>