force-app/main/default/objects/Result__c/fields/Result_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Result_Clinic__c</fullName>
    <formula>Patient__r.Account.Household_Clinic__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result Clinic</label>
    <type>Text</type>
</CustomField>