force-app/main/default/objects/Result__c/fields/Result_Date__c.field-meta.xml
<CustomField>
    <fullName>Result_Date__c</fullName>
    <formula>DATEVALUE( Result_Date_and_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result Date</label>
    <type>Date</type>
</CustomField>