force-app/main/default/objects/Result__c/fields/Result_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Result_Date_and_Time__c</fullName>
    <label>Result Date and Time</label>
    <type>DateTime</type>
</CustomField>