force-app/main/default/objects/Result__c/fields/Results_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Results_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Results Acknowledged</label>
    <type>Checkbox</type>
</CustomField>