force-app/main/default/objects/Result__c/fields/Results_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Results_as_Text__c</fullName>
    <label>Results as Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>