force-app/main/default/objects/Result__c/fields/Scanner__c.field-meta.xml
<CustomField>
    <fullName>Scanner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scanner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>