force-app/main/default/objects/Result__c/fields/Se_Testosterone__c.field-meta.xml
<CustomField>
    <fullName>Se_Testosterone__c</fullName>
    <label>Se Testosterone</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>