force-app/main/default/objects/Result__c/fields/Semen_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Semen_Analysis__c</fullName>
    <label>Semen Analysis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Not Attended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>