force-app/main/default/objects/Result__c/fields/SMA_Genetic_Screening__c.field-meta.xml
<CustomField>
    <fullName>SMA_Genetic_Screening__c</fullName>
    <label>SMA Genetic Screening</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>