force-app/main/default/objects/Result__c/fields/SMA_Genetic_Screening_Text__c.field-meta.xml
<CustomField>
    <fullName>SMA_Genetic_Screening_Text__c</fullName>
    <label>SMA Genetic Screening</label>
    <length>255</length>
    <type>Text</type>
</CustomField>