force-app/main/default/objects/Result__c/fields/Thyroid_Peroxidase_Antibodies__c.field-meta.xml
<CustomField>
    <fullName>Thyroid_Peroxidase_Antibodies__c</fullName>
    <label>Thyroid Peroxidase Antibodies</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>