force-app/main/default/objects/Result__c/fields/Total_Follicles_Left_and_Right__c.field-meta.xml
<CustomField>
    <fullName>Total_Follicles_Left_and_Right__c</fullName>
    <formula>Total_Left_Follicles__c + Total_Right_Follicles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Follicles Left and Right</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>