force-app/main/default/objects/Result__c/fields/TSH__c.field-meta.xml
<CustomField>
    <fullName>TSH__c</fullName>
    <label>TSH Only</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>