force-app/main/default/objects/Result__c/fields/Ultrasound__c.field-meta.xml
<CustomField>
    <fullName>Ultrasound__c</fullName>
    <label>Ultrasound</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Attended</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>