force-app/main/default/objects/Result__c/fields/Varicella__c.field-meta.xml
<CustomField>
    <fullName>Varicella__c</fullName>
    <label>Varicella</label>
    <length>255</length>
    <type>Text</type>
</CustomField>