force-app/main/default/objects/Result__c/fields/Vitamin_D_level__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_D_level__c</fullName>
    <label>Vitamin D Level</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>