force-app/main/default/objects/Result__c/fields/Y_Chromosome_Microdeletion_Assay__c.field-meta.xml
<CustomField>
    <fullName>Y_Chromosome_Microdeletion_Assay__c</fullName>
    <label>Y Chromosome Microdeletion Assay</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>