force-app/main/default/objects/Result__c/recordTypes/Antral_Follicle_Count.recordType-meta.xml
<RecordType>
    <fullName>Antral_Follicle_Count</fullName>
    <active>true</active>
    <description>Patient, Cycle</description>
    <label>Antral Follicle Count</label>
</RecordType>