force-app/main/default/objects/Result__c/recordTypes/Follicular_Sacn.recordType-meta.xml
<RecordType>
    <fullName>Follicular_Sacn</fullName>
    <active>true</active>
    <description>Cycle</description>
    <label>Follicular Scan</label>
</RecordType>