force-app/main/default/objects/Result__c/recordTypes/Infectious_Screen.recordType-meta.xml
<RecordType>
    <fullName>Infectious_Screen</fullName>
    <active>true</active>
    <description>Patient</description>
    <label>ART Screen</label>
</RecordType>