force-app/main/default/objects/Result__c/recordTypes/Other_Result.recordType-meta.xml
<RecordType>
    <fullName>Other_Result</fullName>
    <active>true</active>
    <description>Patient, Cycle</description>
    <label>Other Result</label>
</RecordType>