force-app/main/default/objects/Result__c/recordTypes/Pre_Conception_Pathology.recordType-meta.xml
<RecordType>
    <fullName>Pre_Conception_Pathology</fullName>
    <active>true</active>
    <description>Patient</description>
    <label>Out of Cycle Bloods</label>
</RecordType>