force-app/main/default/objects/Result__c/recordTypes/Recurrent_Implantation_Failure.recordType-meta.xml
<RecordType>
    <fullName>Recurrent_Implantation_Failure</fullName>
    <active>true</active>
    <description>Patient</description>
    <label>Recurrent Implantation Failure</label>
</RecordType>