force-app/main/default/objects/Result__c/recordTypes/Scan.recordType-meta.xml
<RecordType>
    <fullName>Scan</fullName>
    <active>true</active>
    <description>Patient</description>
    <label>Scan</label>
</RecordType>