force-app/main/default/objects/Result__c/recordTypes/Semen_Analysis.recordType-meta.xml
<RecordType>
    <fullName>Semen_Analysis</fullName>
    <active>true</active>
    <description>Patient</description>
    <label>Semen Analysis Result</label>
</RecordType>