force-app/main/default/objects/Result__c/listViews/All_Results.listView-meta.xml
<ListView>
    <fullName>All_Results</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Results</label>
</ListView>